--- a/bullshit.css
+++ b/bullshit.css
@@ -8,13 +8,19 @@ html{
 
 @media only screen and (max-width: 500px){
     html{
-        font-size: 20px;
+        font-size: 16px;
     }
+}
+
+.bordered, .gpt_container{
+    border: var(--text) 0.01em solid;
+    background-color: var(--dark);
+    padding: .5em;
 }
 
 .divWrapper {
   margin: 0px auto;
- /* width: 60rem; */
+  max-width: 50rem; 
   /* margin-top: 3rem; */
   background: rgba(0,0,0,.75);
     padding:1rem;
@@ -25,21 +31,37 @@ html{
     font-family: 'Orbitron', sans-serif;
 }
 
+.wrapper_container{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.btnContainer{
+    display:flex;
+    flex-wrap: wrap;
+    border: var(--text) 0.01em solid;
+    padding-top: .5em;
+    /*padding: .5em;
+    padding: .5em; */
+
+}
+
 .wrapper_mask {
   /*  width: 100%; */
-    height: 6.25rem;
+    height: 3rem; /*should be same as .list-item height */
     overflow: hidden; 
     position: relative;
    /* display: inline-block;
-    margin-bottom: -2.5rem; */
+    margin-bottom: -2.5rem; 
     border-top: 0.01em solid;
-    border-bottom: 0.01em solid;
+    border-bottom: 0.01em solid; */
+    flex-basis: 15rem;
 }
 
 
 .list_item {
-    min-height: 6.25rem;
-    max-height: 6.25rem;
+    min-height: 3rem;
+    max-height: 3rem;
     margin: 0rem;
     padding: 0rem;
     background-size: contain;
@@ -69,19 +91,22 @@ h1 {
   -webkit-background-clip: text;
 }
 
-h2 {
+h3 {
     font-family: 'Orbitron', monospace;
     color:var(--headers);
 }
 
-p {
+p,ul {
     font-family: 'Nova Mono', monospace;
-    color: var(--text);;
+    color: var(--text);
+    margin-top:0px;
+    margin-bottom:0px;
+    padding-bottom:.5rem;
 }
 
 .recipe_if, .recipe_then {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     top:0px;
     color:var(--light);
 }
@@ -99,7 +124,7 @@ a {
 
 .container {
     position: absolute;
-    width:20rem;
+    width:15rem;
 }
 /*
 .tblSlot {
@@ -108,26 +133,20 @@ a {
 } 
 */
 .btnGen {
-    clear: both;
-    max-width: 75%;
+   /* clear: both;
+    max-width: 40%; */
   /*  height: 4rem; */
     background-color: var(--headers);
     color:var(--dark);;
     margin:0 auto;
-    font-size:2rem;
+    font-size:1.5rem;
     text-align:center;
-    border-radius: 4rem 0 4rem 0;
     box-shadow: .5rem .5rem 1rem #08071b;
     cursor: pointer;
     transition-duration: 250ms;
-    margin-bottom: 2rem;
-
+    flex-basis: 20rem;
+    margin-bottom: .5em;
 }
-
-/* .btnGen:hover{
-    background-color: #008F11;
-    color:var(--headers);
-} */
 
 .btnGen:active{
     background-color: var(--light);
@@ -135,42 +154,18 @@ a {
     transform:translateY(.5rem);
 }
 
-.txtBS {
-    width: 50%;
-    height: 4rem;
-    color:var(--dark);;
-    margin:0 auto;
-    font-size:2rem;
-    text-align:center;
-    border-radius: .5rem .5rem 1rem .5rem;
+#btnGenBS{
+    border-radius: 1rem 0 0 1rem;
+   
+}
+#btnGenGPT{
+    border-radius: 0 1rem 1rem 0;
 }
 
-/*
-#actionbox {
-    left:0px;
-}
-#adjectivebox {
-    left:20rem;
-}
-#nounbox {
-    left:40rem;
-}  
-*/
 .footer{
     font-family: 'Nova Mono', monospace;
   /*  padding-top: 3rem; */
     font-size: .75rem;
     text-align: center;
     color:var(--headers);
-}
-
-.q {
-    color:var(--headers);
-}
-.ans {
-    font-style: italic;
-    list-style: none;
-    padding-bottom:1rem;
-    padding-top:.25rem;
-    font-family: 'Nova Mono', monospace;
 }
